--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -33,11 +33,11 @@
                 target="_blank"
                 data-test-label="learn-button"
             >{% t 'buttons.forum' %}</a>
-            <a
+            <li
                 class="nav-link nav-link-flex"
                 id="toggle-dark-mode"
                 data-test-label="dark-mode-button"
-            >{% t 'buttons.toggle-dark-mode' %}</a>
+            >{% t 'buttons.toggle-dark-mode' %}</li>
             </div>
         </div>
     </div>
