check for aria-expanded

--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -7,7 +7,7 @@
     </div>
     <div class="site-nav-right">
         <div class="nav-group">
-            <button aria-expanded="true" class="exposed-button-nav" id="toggle-button-nav" data-test-label="header-menu-button">
+            <button aria-expanded="false" class="exposed-button-nav" id="toggle-button-nav" data-test-label="header-menu-button">
               <span class="sr-only">{% t 'buttons.menu' %}</span></span>
               <span class="menu-btn-text">{% t 'buttons.menu' %}</span>
             </button>
