--- a/src/_includes/assets/css/global.css
+++ b/src/_includes/assets/css/global.css
@@ -17,6 +17,9 @@
   --header-height: 38px;
   /* Font */
   --font-family-sans-serif: 'Lato', sans-serif;
+  --header-element-size: 28px;
+  --header-sub-element-size: 45px;
+  --z-index-site-header: 200;
 }
 
 /* Japanese Font */
