--- a/src/_includes/assets/css/search-bar.css
+++ b/src/_includes/assets/css/search-bar.css
@@ -193,20 +193,20 @@ a:active {
   justify-content: center;
   align-items: center;
   display: flex;
-  border: 2px solid #0a0a23;
-  background: #eeeef0;
-  color: #0a0a23;
+  border: 2px solid var(--gray90);
+  background: var(--gray05);
+  color: var(--gray90);
 }
 
 #readMoreBtn:hover {
-  background: #0a0a23;
-  color: #eeeef0;
+  background: var(--gray90);
+  color: var(--gray05);
 }
 
 /* Show default colors if disabled */
 .disabled:hover {
-  background: #eeeef0;
-  color: #0a0a23;
+  background: var(--gray05);
+  color: var(--gray90);
 }
 
 .display-search form {
