fix: simplify link schema for English to use as base, update templates to use new link schema

--- a/src/_includes/partials/learn-cta-row.njk
+++ b/src/_includes/partials/learn-cta-row.njk
@@ -1,4 +1,4 @@
-{% set learnURL %}{% t 'links:learn-to-code-cta' %}{% endset %}
+{% set learnURL %}{% t 'links:learn' %}{% endset %}
 
 <div class="learn-cta-row" data-test-label="learn-cta-row">
     <p>
