--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -24,7 +24,7 @@
                   class="nav-link nav-link-flex"
                   id="nav-learn"
                   rel="noopener noreferrer"
-                  href="{% t 'links:nav:learn' %}"
+                  href="{% t 'links:learn' %}"
                   target="_blank"
                   data-test-label="learn-button"
               >{% t 'buttons.learn' %}</a></li>
