--- a/src/_includes/partials/search-bar.njk
+++ b/src/_includes/partials/search-bar.njk
@@ -7,16 +7,20 @@
         } -%}
     {% endif %}
 {% endset %}
-<form id="search-form" data-test-label="search-bar">
-    <div role="search" class="searchbox__wrapper">
-        <label class="fcc_sr_only" for='search-input'>
-            {% t 'search.label' %}
-        </label>
-        <input type="search" placeholder="{{ searchPlaceholder }}" id="search-input" />
-        <button type="submit" class="ais-SearchBox-submit">
-            {% include "partials/icons/magnifying-glass.njk" %}
-            <span class="fcc_sr_only">{% t 'search.accessible-name' %}</span>
-        </button>
-        <div id='dropdown-container'></div>
+
+<div class="fcc_searchBar" data-test-label="search-bar">
+    <div class="fcc_search_wrapper">
+        <div class="ais-SearchBox">
+            <form action class="ais-SearchBox-form" id="search-form" novalidate role="search">
+                <input class="ais-SearchBox-input" id="search-input" aria-label="Search" autocomplete="off" autocorrect="off" autocapitalize="off" placeholder="Search 12,200+ news articles, tutorials, and books" spellcheck="false" maxlength="512" type="search" />
+                <button class="ais-SearchBox-submit" type="submit" title="Submit search terms">
+                    {% include "partials/icons/magnifying-glass.njk" %}
+                </button>
+                <button class="ais-SearchBox-reset" type="reset" title="Clear search terms">
+                    {% include "partials/icons/reset-icon.njk" %}
+                </button>
+            </form>
+        </div>
+        <div id="dropdown-container"></div>
     </div>
-</form>
+</div>
