--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -256,7 +256,7 @@ ul {
   font-size: 18px;
   height: var(--header-height);
   justify-content: space-between;
-  padding: 0 10px;
+  padding: 0 15px;
 }
 
 .nav-link {
@@ -354,6 +354,7 @@ ul {
   height: 100%;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
 }
 
 /* Site Nav Hack Explanation (above):
