--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -12,6 +12,9 @@
               <span class="menu-btn-text">{% t 'buttons.menu' %}</span>
             </button>
             <ul id="menu-dropdown" class="nav-list" aria-labelledby="toggle-button-nav" data-test-label="header-menu">
+                {# <li>
+                    {% include "partials/search-bar.njk" %}
+                </li> #}
                 <li><a
                   class="nav-link nav-link-flex"
                   id="nav-forum"
